--- a/src/API/API.vcxproj.filters
+++ b/src/API/API.vcxproj.filters
@@ -5,5 +5,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MessengerAPI.h" />
+    <ClInclude Include="Query.h" />
   </ItemGroup>
 </Project>
