--- a/src/Server/MessengerServer.vcxproj.filters
+++ b/src/Server/MessengerServer.vcxproj.filters
@@ -8,7 +8,7 @@
     <ClCompile Include="Engine\Engine.cpp" />
     <ClCompile Include="Logger\Logger.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Server\Server.cpp" />
+    <ClCompile Include="Network\Network.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Accounts\AccountStorage\AccountStorage.h" />
@@ -17,7 +17,7 @@
     <ClInclude Include="Database\MySqlDB.h" />
     <ClInclude Include="Engine\Engine.h" />
     <ClInclude Include="Logger\Logger.h" />
-    <ClInclude Include="Server\Connection.h" />
-    <ClInclude Include="Server\Server.h" />
+    <ClInclude Include="Network\Connection.h" />
+    <ClInclude Include="Network\Network.h" />
   </ItemGroup>
 </Project>
