--- a/src/API/API.vcxproj
+++ b/src/API/API.vcxproj
@@ -25,11 +25,6 @@
     <ClInclude Include="Query.h" />
     <ClInclude Include="MessengerAPI.h" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Protocol\Protocol.vcxproj">
-      <Project>{9ace21e4-1ea9-4e6c-a4c3-e63e1a1fac75}</Project>
-    </ProjectReference>
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{7645130D-B9B7-4DC9-A0D8-0066BE2430D2}</ProjectGuid>
@@ -118,7 +113,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WIN32_WINNT=0x0501;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)src;E:\Lib\boost_1_60_0_x64</AdditionalIncludeDirectories>
     </ClCompile>
@@ -127,9 +122,12 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>E:\Lib\boost_1_60_0_x64\lib64-msvc-14.0;$(SolutionDir)build\$(Platform)\$(Configuration);</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Protocol.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)build\$(Platform)\$(Configuration);E:\Lib\boost_1_60_0_x64\lib64-msvc-14.0;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Protocol.lib;libboost_thread-vc140-mt-gd-1_60.lib;</AdditionalDependencies>
     </Lib>
+    <ProjectReference>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -169,8 +167,11 @@
     </Link>
     <Lib>
       <AdditionalLibraryDirectories>E:\Lib\boost_1_60_0_x64\lib64-msvc-14.0;$(SolutionDir)build\$(Platform)\$(Configuration);</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Protocol.lib</AdditionalDependencies>
+      <AdditionalDependencies>Protocol.lib;libboost_thread-vc140-mt-gd-1_60.lib;</AdditionalDependencies>
     </Lib>
+    <ProjectReference>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
