--- a/src/Server/MessengerServer.vcxproj.filters
+++ b/src/Server/MessengerServer.vcxproj.filters
@@ -9,7 +9,7 @@
     <ClCompile Include="Logger\Logger.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Network\Network.cpp" />
-    <ClCompile Include="Messages.cpp" />
+    <ClCompile Include="Utility\ConfigParser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Accounts\AccountStorage\AccountStorage.h" />
@@ -20,7 +20,7 @@
     <ClInclude Include="Logger\Logger.h" />
     <ClInclude Include="Network\Connection.h" />
     <ClInclude Include="Network\Network.h" />
-    <ClInclude Include="Messages.h" />
     <ClInclude Include="Utility\InPlace.h" />
+    <ClInclude Include="Utility\ConfigParser.h" />
   </ItemGroup>
 </Project>
