--- a/src/Server/MessengerServer.vcxproj
+++ b/src/Server/MessengerServer.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="Engine\Engine.cpp" />
     <ClCompile Include="Logger\Logger.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Messages\MessageManager.cpp" />
     <ClCompile Include="Messages\MessagesStorage.cpp" />
     <ClCompile Include="Network\Network.cpp" />
     <ClCompile Include="Utility\ConfigParser.cpp" />
@@ -38,6 +39,7 @@
     <ClInclude Include="Database\MySqlDB.h" />
     <ClInclude Include="Engine\Engine.h" />
     <ClInclude Include="Logger\Logger.h" />
+    <ClInclude Include="Messages\MessageManager.h" />
     <ClInclude Include="Messages\MessagesStorage.h" />
     <ClInclude Include="Messages\Speakers.h" />
     <ClInclude Include="Network\Connection.h" />
