--- a/src/MessengerClient/MessengerClient.vcxproj
+++ b/src/MessengerClient/MessengerClient.vcxproj
@@ -192,6 +192,7 @@
   <ItemGroup>
     <ClInclude Include="DialogLogin.h" />
     <ClInclude Include="MessengerClient.h" />
+    <ClInclude Include="MessengerClientDlg.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -199,6 +200,7 @@
   <ItemGroup>
     <ClCompile Include="DialogLogin.cpp" />
     <ClCompile Include="MessengerClient.cpp" />
+    <ClCompile Include="MessengerClientDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
