--- a/src/API/API.vcxproj
+++ b/src/API/API.vcxproj
@@ -20,10 +20,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MessengerAPI.cpp" />
+    <ClCompile Include="AsyncStrategy.cpp" />
+    <ClCompile Include="PacketAnalyzer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="NetworkStrategy.h" />
+    <ClInclude Include="PacketAnalyzer.h" />
     <ClInclude Include="Query.h" />
     <ClInclude Include="MessengerAPI.h" />
+    <ClInclude Include="AsyncStrategy.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
