--- a/src/MessengerClient/MessengerClient.vcxproj
+++ b/src/MessengerClient/MessengerClient.vcxproj
@@ -190,6 +190,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ChatContainer.h" />
     <ClInclude Include="DialogLogin.h" />
     <ClInclude Include="MessengerClient.h" />
     <ClInclude Include="MessengerClientDlg.h" />
@@ -198,6 +199,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ChatContainer.cpp" />
     <ClCompile Include="DialogLogin.cpp" />
     <ClCompile Include="MessengerClient.cpp" />
     <ClCompile Include="MessengerClientDlg.cpp" />
