--- a/src/MessengerClient/MessengerClient.vcxproj.filters
+++ b/src/MessengerClient/MessengerClient.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="MessengerClientDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ChatContainer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MessengerClient.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MessengerClientDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ChatContainer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
