--- a/src/Protocol/Protocol.vcxproj.filters
+++ b/src/Protocol/Protocol.vcxproj.filters
@@ -2,28 +2,28 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="BaseHeader.h" />
-    <ClInclude Include="LoginRequest.h" />
-    <ClInclude Include="LoginResponse.h" />
-    <ClInclude Include="Logout.h" />
     <ClInclude Include="SerializationError.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="TransferredData.h" />
-    <ClInclude Include="UserInfo.h" />
-    <ClInclude Include="MessageRequest.h" />
     <ClInclude Include="GlobalInfo.h" />
-    <ClInclude Include="LastMessageResponse.h" />
-    <ClInclude Include="Message.h" />
     <ClInclude Include="LoginRules.h" />
+    <ClInclude Include="Types\LastMessageResponse.h" />
+    <ClInclude Include="Types\LoginRequest.h" />
+    <ClInclude Include="Types\LoginResponse.h" />
+    <ClInclude Include="Types\Logout.h" />
+    <ClInclude Include="Types\Message.h" />
+    <ClInclude Include="Types\MessageRequest.h" />
+    <ClInclude Include="Types\UserInfo.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseHeader.cpp" />
-    <ClCompile Include="LoginResponse.cpp" />
-    <ClCompile Include="LoginRequest.cpp" />
-    <ClCompile Include="Logout.cpp" />
-    <ClCompile Include="UserInfo.cpp" />
-    <ClCompile Include="MessageRequest.cpp" />
-    <ClCompile Include="LastMessageResponse.cpp" />
-    <ClCompile Include="Message.cpp" />
     <ClCompile Include="LoginRules.cpp" />
+    <ClCompile Include="Types\LastMessageResponse.cpp" />
+    <ClCompile Include="Types\LoginRequest.cpp" />
+    <ClCompile Include="Types\LoginResponse.cpp" />
+    <ClCompile Include="Types\Logout.cpp" />
+    <ClCompile Include="Types\Message.cpp" />
+    <ClCompile Include="Types\MessageRequest.cpp" />
+    <ClCompile Include="Types\UserInfo.cpp" />
   </ItemGroup>
 </Project>
