--- a/src/Protocol/Protocol.vcxproj
+++ b/src/Protocol/Protocol.vcxproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseHeader.cpp" />
+    <ClCompile Include="Types.cpp" />
     <ClCompile Include="Types\LastMessageResponse.cpp" />
     <ClCompile Include="Types\LoginRequest.cpp" />
     <ClCompile Include="Types\LoginResponse.cpp" />
